# nvtop-rust

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md
.github/workflows/: rust.yml
src/: app.rs  errors.rs  gpu.rs  lib.rs  main.rs  nvtop_args.rs  stylers.rs  termite.rs
