[package]
name = "nvtop"
version = "0.1.2"
edition = "2021"
description = """ nvtop: An NVIDIA SMI'esk GPU Monitoring tool for your terminal. """
keywords = [
  "Real-time monitoring",
  "GPU",
  "NVIDIA",
  "nvml",
  "nvidia-smi",
  "Command-line tool",
]
authors = ["jer, alphastrata@gmail.com", "camuward, cameronuward@gmail.com"]
documentation = "https://www.github.com/alphastrata/nvtop"
license = "MIT"
homepage = "https://www.jeremyfwebb.ninja"
publish = true

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
crossterm = "0.27.0"
nvml-wrapper = "0.9.0"
ratatui = "0.23.0"
thiserror = "1.0.49"
